Added readme, code cleanup